# smhasher

./: .gitignore  .gitmodules  Avalanche.md  AvalancheTest.cpp  AvalancheTest.h  Bitslice.cpp  Bitvec.cpp  Bitvec.h  BlockCipher.h  CMakeLists.txt  Cipher.cpp  Cipher.h  City.cpp  Core.cpp  DictionaryTest.cpp  DifferentialTest.h  Diffusion.cpp  Distribution.md  FWTransform.cpp  FillFactor.md  Hamming.cpp  Hashes.cpp  Hashes.h  Junk.h  KeysetTest.cpp  KeysetTest.h  MurmurHash.md  MurmurHash1.cpp  MurmurHash1.h  MurmurHash1.md  MurmurHash2.cpp  MurmurHash2.h  MurmurHash2.md  MurmurHash2Flaw.md  MurmurHash3.cpp  MurmurHash3.h  MurmurHash3.md  MurmurHash3_x64_128.md  MurmurHash3_x86_128.md  MurmurHash3_x86_32.md  (+34 more)
Project Files/: SMHasher.cbproj  SMHasherGroup.groupproj  SMHasherSupport.cbproj
branches/chandlerc_dev/: AvalancheTest.cpp  AvalancheTest.h  Bitvec.cpp  Bitvec.h  CMakeLists.txt  City.h  CityTest.cpp  DifferentialTest.cpp  Hashes.cpp  Hashes.h  KeysetTest.cpp  KeysetTest.h  Platform.h  Random.cpp  Stats.cpp  Stats.h  SuperFastHash.cpp  Types.cpp  main.cpp  md5.cpp  sha1.cpp
src/: CMakeLists.txt  City.cpp  Hashes.h  MurmurHash2.cpp  MurmurHash3.cpp  MurmurHash3.h  PMurHash.c  PMurHash.h  Platform.cpp  Platform.h  SpeedTest.cpp  SpeedTest.h  Stats.cpp  bcc64.cmake  crc.cpp  lookup3.cpp  main.cpp  md5.cpp  pstdint.h  sha1.cpp  t1ha.c  t1ha.cc  t1ha.h
trunk/: AvalancheTest.cpp  AvalancheTest.h  Bitslice.cpp  Bitvec.cpp  Bitvec.h  BlockCipher.cpp  CMakeLists.txt  City.cpp  City.h  Core.h  CycleTest.cpp  CycleTest.h  DictionaryTest.h  DifferentialTest.h  FWTransform.h  Hamming.h  Hashes.cpp  Hashes.h  Junk.cpp  KeysetTest.cpp  KeysetTest.h  MurmurHash1.cpp  MurmurHash1.h  MurmurHash2.cpp  MurmurHash2.h  MurmurHash3.cpp  MurmurHash3.h  MurmurHashAligned.cpp  MurmurHashAligned2.cpp  MurmurHashTest.cpp  Platform.cpp  Platform.h  Random.h  SMHasher.sln  SMHasher.vcproj  SparseKeyTest.cpp  SparseKeyTest.h  SpeedTest.cpp  SpeedTest.h  Stats.cpp  (+16 more)
wiki/: Avalanche.wiki  Distribution.wiki  FillFactor.wiki  MurmurHash.wiki  MurmurHash1.wiki  MurmurHash2.wiki  MurmurHash2Flaw.wiki  MurmurHash3.wiki  MurmurHash3_x64_128.wiki  MurmurHash3_x86_128.wiki  MurmurHash3_x86_32.wiki  MururHash3.wiki  SMHasher.wiki  SMHasherDump.wiki  SuperFastHash.wiki  avalanche.wiki  lookup3.wiki
